Logo within footer now has a Link route, FAQs fitted for 400px and icons have been imported for visual effects

--- a/src/CSS/FAQ.css
+++ b/src/CSS/FAQ.css
@@ -2,6 +2,16 @@
     padding: 0 5%;
 }
 
+.header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.mirror {
+    rotate: 180deg;
+}
+
 .faq__container > h3 {
     background-color: #163C5E;
     color: #ffd700;
