--- a/src/CSS/Cred.css
+++ b/src/CSS/Cred.css
@@ -20,3 +20,15 @@
 .cred__badge > img {
     width: 75%;
 }
+
+@media (min-width: 1000px) {
+    .cred__badge > img {
+        width: 50%;
+    }
+}
+
+@media (min-width: 1400px) {
+    .cred__badge > img {
+        width: 40%;
+    }
+}
