--- a/src/CSS/DeskTeam.css
+++ b/src/CSS/DeskTeam.css
@@ -4,7 +4,7 @@
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    padding: 5%;
+    padding: 5% 5% 0 5%;
 }
 
 /* Assign the category__container to the first column */
