--- a/src/CSS/Hero.css
+++ b/src/CSS/Hero.css
@@ -26,7 +26,6 @@
 .hero__button {
     background-color: #163C5E;
     color: #f2f2f2;
-    /* padding: 2% 10%; */
     padding: 0.5rem 2rem;
     border-radius: 10px;
     font-size: clamp(0.8rem, 1.5vw, 1.2rem);
@@ -52,16 +51,10 @@
         padding: 0 10%;
     }
 
-    .Hero > h3 {
-        font-size: 32px;
-    } 
-
-    .Hero > h1 {
-        font-size: 40px;
-    }
-
     .hero__button {
-        font-size: 16px;
+        padding: 1.2rem 3rem; 
+        font-size: clamp(.5rem, 1.5vw, 1rem); 
+        border-radius: 12px; 
     }
 
     .hero__container {
@@ -78,7 +71,7 @@
         .div3 { grid-area: 1 / 2 / 2 / 3; }
 
         .hero__img > img {
-            width: 100%;
+            width: 110%;
         }
 
         .hero__container > .context {
@@ -90,12 +83,12 @@
         }
 
         .context > h3 {
-            font-size: 24px;
+            font-size: clamp(1rem, 2.5vw, 1.5rem);
             margin-bottom: 15px;
         }
 
         .context > h1 {
-            font-size: 36px;
+            font-size: clamp(1.5rem, 4vw, 3rem);
             margin-top: 0;
             color: #333;
         }
@@ -103,6 +96,22 @@
 
 @media (min-width: 1400px) {
     .context > h1 {
-        font-size: clamp(2rem, 2.5vw, 3rem);
+        font-size: clamp(2rem, 4.5vw, 3.5rem);
     }
+
+    .context > h3 {
+        font-size: clamp(1.5rem, 3vw, 2rem);
+    }
+
+    .hero__button {
+        padding: 1.2rem 3rem; 
+        font-size: clamp(1rem, 2vw, 1.4rem);
+        border-radius: 12px;
+    }
+    
+    .hero__img > img {
+        width: 105%;
+    }
+    
+    
 }
